components for navbar are prepared and color variables for layout is written in variables.css ( global )

--- a/components/button.module.css
+++ b/components/button.module.css
@@ -1,3 +1,7 @@
 .button {
-    background-color: #ccc;
+  background-color: transparent;
+  color: var(--c-text-color);
+  cursor: pointer;
+
+  transition: all var(--t-fade);
 }
