creating tweet button inside of theme button component

--- a/.storybook/style.css
+++ b/.storybook/style.css
@@ -1,8 +1,12 @@
 .icons {
-    color: #fff;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-gap: 20px;
-    font-size: 40px;
-    padding: 20px;
+  color: #fff;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 20px;
+  font-size: 40px;
+  padding: 20px;
+}
+
+body {
+  padding: 30px;
 }
