--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,8 @@
 :root {
   --c-primary: #000;
-  --c-theme: rgba(29, 161, 242, 1);
+  --c-theme: rgb(29, 161, 242);
   --c-theme-20: rgba(29, 161, 242, 0.2);
+  --c-tweet-hover: rgb(20, 126, 193);
   --c-text-color: #fff;
   --c-border-color: #2f3336;
   --c-gray: #6e767d;
