--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,7 +3,7 @@
   --c-theme: rgb(29, 161, 242);
   --c-theme-20: rgba(29, 161, 242, 0.2);
   --c-tweet-hover: rgb(20, 126, 193);
-  --c-text-color: #fff;
+  --c-text-color: #d9d9d9;
   --c-border-color: #2f3336;
   --c-gray: #6e767d;
   --c-dark-gray: #202327;
