--- a/components/col-sidebar.module.css
+++ b/components/col-sidebar.module.css
@@ -1,28 +1,29 @@
 .sidebar {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   @media (--mode-desk) {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 23px;
+    padding-right: 23px;
     align-items: flex-start;
   }
 }
 
 .tweet {
-  margin-top: 16px;
+  margin-top: 15px;
   margin-bottom: 20px;
 
   @media (--mode-desk) {
-    width: 100%;
+    width: 210px;
   }
 }
 
 .profile {
   margin-top: auto;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
