responsive layout is centeredfor tablet mode

--- a/components/navigation.module.css
+++ b/components/navigation.module.css
@@ -1,5 +1,15 @@
 .nav {
+
   button {
+
+    margin-right: auto;
+    margin-left: auto;
+
+    @media (--mode-desk) {
+      margin-left: 0;
+      margin-right: auto;
+    }
+
     & + button {
       margin-top: 8px;
     }
