--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,12 +1,28 @@
 :root {
-  --c-primary: #000;
+  --c-primary: #fff;
   --c-theme: rgb(29, 161, 242);
   --c-theme-10: rgba(29, 161, 242, 0.1);
   --c-tweet-hover: rgb(20, 126, 193);
-  --c-text-color: #d9d9d9;
-  --c-border-color: #2f3336;
+  --c-text-color: #000;
+  --c-border-color: rgb(230, 236, 240);
   --c-gray: #6e767d;
   --c-dark-gray: #202327;
 
   --t-fade: 200ms;
+}
+
+.dim:root {
+  --c-primary: rgb(21, 32, 43);
+  --c-text-color: #d9d9d9;
+  --c-border-color: #2f3336;
+  --c-gray: #6e767d;
+  --c-dark-gray: #202327;
+}
+
+.dark:root {
+  --c-primary: #000;
+  --c-text-color: #d9d9d9;
+  --c-border-color: #2f3336;
+  --c-gray: #6e767d;
+  --c-dark-gray: #202327;
 }
