--- a/components/theme-button.module.css
+++ b/components/theme-button.module.css
@@ -7,7 +7,7 @@
 
   &:hover {
     background-color: var(--c-tweet-hover);
-    color: var(--c-text-color);
+    color: #fff;
   }
 
   @media (--mode-desk) {
