--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,18 +1,20 @@
 .layout {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 88px 1fr;
   min-height: 100vh;
+  min-width: 320px;
   max-width: 670px;
   margin-left: auto;
   margin-right: auto;
   
   @media (--mode-tab) {
       max-width: 1060px;
-      grid-template-columns: auto 1fr 380px;
+      grid-template-columns: 88px 1fr 380px;
   }
 
   @media (--mode-desk) {
     max-width: 1270px;
+    grid-template-columns: 275px 1fr 380px;
 }
 }
 
